[package]
name = "frag"
version = "0.1.3"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"
description = "A simple crate to do live shader coding and rendering shaders to video."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ocdy1001/frag"
keywords = ["opengl", "shader", "fragment", "mp4", "rendering"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frag"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
sdl2 = "0.34.3"
gl = "0.14.0"
hotwatch = "0.4.5"
png = "0.16.8"
