[package]
name = "frag"
version = "0.1.6"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
description = "A simple crate to do live shader coding and rendering shaders to video."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/codybloemhard/frag"
keywords = ["opengl", "shader", "fragment", "mp4", "rendering"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "frag"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
sdl2 = "0.36.0"
gl = "0.14.0"
hotwatch = "0.5.0"
png = "0.17.13"
